--- a/trafficlights.html
+++ b/trafficlights.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 <script>
+    var intervalID;
+
     function light(sw) {
         var pic;
         if (sw == 0) {
@@ -18,6 +20,27 @@
         }
         document.getElementById("myImage").src = pic;
     }
+
+    function startTraffic() {
+        light(0); // Start with neutral
+        intervalID = setInterval(trafficSwitchAutomatic, 6000);
+    }
+
+    function stopTraffic() {
+        clearInterval(intervalID);
+    }
+
+    function trafficSwitchAutomatic() {
+        if (document.getElementById("myImage").src.endsWith("neutral.jpg")) {
+            light(1);
+        } else if (document.getElementById("myImage").src.endsWith("green.jpg")) {
+            light(2);
+        } else if (document.getElementById("myImage").src.endsWith("yellow.jpg")) {
+            light(3);
+        } else {
+            light(0);
+        }
+    }
 </script>
 
 <img id="myImage" src="neutral.jpg" width="30%" height="30%">
@@ -27,6 +50,11 @@
     <button type="button" onclick="light(1)" >Light on Green</button>
     <button type="button" onclick="light(2)" >Light on Yellow</button>
     <button type="button" onclick="light(3)" >Light on Red</button>
+</p>
+
+<p>
+    <button type="button" onclick="startTraffic()">Start Traffic</button>
+    <button type="button" onclick="stopTraffic()">Stop Traffic</button>
 </p>
 
 </body>
