--- a/trafficlights.html
+++ b/trafficlights.html
@@ -3,27 +3,25 @@
 <body>
 <script>
     var intervalID;
+    var minutes = 0;
+    var seconds = 5;
 
     function light(sw) {
         var pic;
         if (sw == 0) {
-            pic = "neutral.jpg";
-        }
-        else if (sw == 1) {
             pic = "green.jpg";
         }
-        else if (sw == 2) {
-            pic = "yellow.jpg";
+        else if (sw == 1) {
+            pic = "red.jpg";
         }
         else {
-            pic = "red.jpg";
+            pic = "yellow.jpg";
         }
         document.getElementById("myImage").src = pic;
     }
 
     function startTraffic() {
-        light(0);
-        intervalID = setInterval(trafficSwitchAutomatic, 2000);
+        intervalID = setInterval(trafficSwitchAutomatic, 1000);
     }
 
     function stopTraffic() {
@@ -31,23 +29,44 @@
     }
 
     function trafficSwitchAutomatic() {
-        if (document.getElementById("myImage").src.endsWith("neutral.jpg")) {
+        if (minutes === 0 && seconds === 0) {
+            switchLights();
+            minutes = 0;
+            seconds = 5;
+        } else {
+            if (seconds === 0) {
+                minutes--;
+                seconds = 59;
+            } else {
+                seconds--;
+            }
+        }
+        document.getElementById("timer").innerText = formatTime(minutes, seconds);
+    }
+
+    function switchLights() {
+        if (document.getElementById("myImage").src.endsWith("green.jpg")) {
             light(1);
-        } else if (document.getElementById("myImage").src.endsWith("green.jpg")) {
+        } else if (document.getElementById("myImage").src.endsWith("red.jpg")) {
             light(2);
-        } else if (document.getElementById("myImage").src.endsWith("yellow.jpg")) {
-            light(3);
         } else {
             light(0);
         }
     }
-    
+
+    function formatTime(minutes, seconds) {
+        return minutes.toString().padStart(2, '0') + ":" + seconds.toString().padStart(2, '0');
+    }
+
     window.onload = function() {
         startTraffic();
     };
 </script>
 
-<img style="margin: 15% 50%;" id="myImage" src="neutral.jpg" width="5%" height="5%">
+<div style="text-align: center;">
+    <img style="margin-top: 15%;" id="myImage" src="green.jpg" width="5%" height="5%">
+    <p><span id="timer">00:05</span></p>
+</div>
 
 </body>
 </html>
